objects/ScCollection_Bucket_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for the bucketing of the contracts on the basis of days past due value on the contract object</description>
    <fields>
        <fullName>ScCollection_Max2__c</fullName>
        <label>Bucket 2 Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Max3__c</fullName>
        <label>Bucket 3 Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Max4__c</fullName>
        <label>Bucket 4 Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_MaxDPD1__c</fullName>
        <label>Bucket 1 Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Min2__c</fullName>
        <label>Bucket 2 Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Min3__c</fullName>
        <label>Bucket 3 Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Min4__c</fullName>
        <label>Bucket 4 Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_MinDPD1__c</fullName>
        <label>Bucket 1 Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Number_of_Buckets__c</fullName>
        <label>Number of Buckets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_PAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_PL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Loan</label>
        <type>Checkbox</type>
    </fields>
    <label>Bucket Configuration</label>
</CustomObject>